--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,23 @@
     font-size: 24px;
     /* font-weight: bold; */
 }
+
+#intro_block {
+    display:flex;
+    flex: 1 1 auto;
+}
+
+#intro_text {
+    flex: 1 1 0;
+    display: flex;
+    flex-direction: column;
+}
+
+#intro_img_section {
+    flex: 1 1 0;
+}
+
+#intro_img {
+    width: 100%;
+    height: 100%;
+}
