--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 
 * {
-    outline: 2px solid red; /*TODO: remove test code*/
+    /* outline: 2px solid red; TODO: remove test code */
     font-family: Hero, Arial, Helvetica, sans-serif;
   }
 
@@ -13,9 +13,14 @@
     align-items: stretch;
 }
 
-#header {
+/* this selector is for adding identical padding to all sections
+while allowing them to keep their own background colors*/
+#page_wrapper > * {
     padding-left: 14%;
     padding-right: 14%;
+}
+
+#header {
     display: flex;
     justify-content: space-between;
     flex: 0 0 auto;
@@ -39,26 +44,55 @@
 #header_links a {
     color: #E5E7EB;
     font-size: 18px;
-    
 }
 #header_logo p{
     color: #F9FAF8;
     font-size: 24px;
-    /* font-weight: bold; */
+    font-weight: bold;
 }
 
-#intro_block {
+#intro_section {
     display:flex;
-    flex: 1 1 auto;
+    flex: 1 1 0;
+    background-color: #1F2937;
+    gap: 30px;
+    padding-top: 150px;
+    padding-bottom: 150px;
 }
 
-#intro_text {
+#intro_text_section {
     flex: 1 1 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    gap: 0px;
+}
+
+#intro_title {
+    font-size: 48px;
+    font-weight: bolder;
+    color:#F9FAF8;
+    flex: 0 0 auto;
+    margin: 0;
+}
+
+#intro_text {
+    color: #E5E7EB;
+    font-size: 18px;
+    flex: 0 0 auto;
+}
+
+#intro_button {
+    width: 25%;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    flex: 0 0 auto;
+    border-radius: 5px;
 }
 
 #intro_img_section {
+    /* display: flex; */
     flex: 1 1 0;
 }
 
